k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnv-ui-monitor
  labels:
    app: cnv-ui-monitor
spec:
  selector:
    app: cnv-ui-monitor
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
