k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cnv-ui-monitor
  labels:
    app: cnv-ui-monitor
spec:
  to:
    kind: Service
    name: cnv-ui-monitor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
